# IPC-browser

./: CMakeLists.txt  README.md
browser/: AgentHelper.cpp  AgentHelper.h  BrowserRun.cpp  GlobalFunctions.cpp  JVMThreadFuncs.cpp
browser/JseCaller/: IAuthenticationCaller.cpp  IAuthenticationCaller.h  IDeviceCaller.cpp  IDeviceCaller.h  IIPCCaller.h  IMediaPlayerCaller.cpp  IMediaPlayerCaller.h  IUBankDeviceCaller.cpp  IUBankDeviceCaller.h  IUtilityCaller.cpp  IUtilityCaller.h  IiPanelCaller.cpp  IiPanelCaller.h  IiPanelPageWidgetCaller.cpp  IiPanelPageWidgetCaller.h
ipc/: AgentShell.cpp  AgentShell.h  IPC.cpp  IPC.h  IPCAssertions.cpp  IPCAssertions.h  IPCCaller.cpp  IPCCaller.h  IPCServer.cpp  IPCServer.h
iptv/: CMakeLists.txt  IArchImageAVPlayer.h  IAuthentication.h  IDevice.h  IMediaPlayer.h  IUBankDevice.h  IUtility.h  IiPanel.h  IiPanelPageWidget.h  JseGlueAssertions.cpp  JseGlueAssertions.h  JseGlueMacro.h
iptv/MultipAgent/: AgentHelper.cpp  AgentHelper.h  CMakeLists.txt  GlobalFunctions.cpp  JVMThreadFuncs.cpp  MidwareRun.cpp
iptv/MultipAgent/JseServer/: IAuthenticationServer.cpp  IAuthenticationServer.h  IDeviceServer.cpp  IDeviceServer.h  IIPCServer.h  IMediaPlayerServer.cpp  IMediaPlayerServer.h  IUBankDeviceServer.cpp  IUBankDeviceServer.h  IUtilityServer.cpp  IUtilityServer.h  IiPanelPageWidgetServer.cpp  IiPanelPageWidgetServer.h  IiPanelServer.cpp  IiPanelServer.h
iptv/SingleAgent/: CMakeLists.txt  IAuthenticationCell.cpp  IAuthenticationCell.h  IDeviceCell.cpp  IDeviceCell.h  IMediaPlayerCell.cpp  IMediaPlayerCell.h  IUBankDeviceCell.cpp  IUBankDeviceCell.h  IUtilityCell.cpp  IUtilityCell.h  IiPanelCell.cpp  IiPanelCell.h  IiPanelPageWidgetCell.cpp  IiPanelPageWidgetCell.h
